--- a/home/config/sublime-text-3/.gitignore
+++ b/home/config/sublime-text-3/.gitignore
@@ -1,5 +1,7 @@
 # Package Control
+/Packages/User/Package Control.ca-certs/
 /Packages/User/Package Control.cache/
+/Packages/User/Package Control.ca-bundle
+/Packages/User/Package Control.ca-list
 /Packages/User/Package Control.last-run
-/Packages/User/Package Control.merged-ca-bundle
-/Packages/User/Package Control.user-ca-bundle
+/Packages/User/Package Control.system-ca-bundle
