--- a/home/config/sublime-text-3/.gitignore
+++ b/home/config/sublime-text-3/.gitignore
@@ -5,3 +5,4 @@
 /Packages/User/Package Control.ca-list
 /Packages/User/Package Control.last-run
 /Packages/User/Package Control.system-ca-bundle
+/Packages/User/Package Control.user-ca-bundle
