--- a/home/config/atlassian/atlas/plugins-installed.toml
+++ b/home/config/atlassian/atlas/plugins-installed.toml
@@ -27,7 +27,7 @@
   summary = "Micros plugin for atlas-cli"
   version = "53-bae44a0"
   sha256 = ""
-  exec = "~/.local/share/atlassian/atlas/plugin/micros"
+  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/micros"
   channel = "stable"
 
 [[plugin]]
@@ -67,13 +67,13 @@
   summary = "Nebulae"
   version = "2.0.0"
   sha256 = ""
-  exec = "~/.local/share/atlassian/atlas/plugin/nebulae"
+  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/nebulae"
   channel = "stable"
 
 [[plugin]]
   name = "poco"
   summary = "Poco plugin for atlas-cli"
-  version = "1.1.25"
+  version = "1.1.26"
   sha256 = ""
   exec = "~/.local/share/atlassian/atlas/plugin/poco"
   channel = "stable"
@@ -81,7 +81,7 @@
 [[plugin]]
   name = "spin"
   summary = "Plugin for Spinnaker"
-  version = "0.8.251-b9f53c2"
+  version = "0.8.265-d78c1af"
   sha256 = ""
   exec = "~/.local/share/atlassian/atlas/plugin/spin"
   channel = "stable"
@@ -89,7 +89,7 @@
 [[plugin]]
   name = "secrets"
   summary = "Plugin for Vault secrets management"
-  version = "0.5.0-51-gfc28cfe"
+  version = "0.5.0-54-g089258b"
   sha256 = ""
   exec = "~/.local/share/atlassian/atlas/plugin/secrets"
   channel = "stable"
@@ -97,7 +97,7 @@
 [[plugin]]
   name = "packages"
   summary = "Provides a set of tools for working with packages.a.c"
-  version = "1.6.15"
+  version = "1.6.19"
   sha256 = ""
   exec = "~/.local/share/atlassian/atlas/plugin/packages"
   channel = "stable"
@@ -105,9 +105,9 @@
 [[plugin]]
   name = "atlasdev"
   summary = "Plugin for atlas-cli developers"
-  version = "0.0-771-g1a6673a"
+  version = "0.0-773-g5eba73e"
   sha256 = ""
-  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/atlasdev"
+  exec = "~/.local/share/atlassian/atlas/plugin/atlasdev"
   channel = "stable"
 
 [[plugin]]
@@ -121,25 +121,25 @@
 [[plugin]]
   name = "chaos"
   summary = "brahmos cli plugin"
-  version = "41-549a352"
+  version = "14-df3258c"
   sha256 = ""
-  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/chaos"
+  exec = "~/.local/share/atlassian/atlas/plugin/chaos"
   channel = "stable"
 
 [[plugin]]
   name = "cprs"
   summary = "Command line interface for the Command Peer Review System."
-  version = "1.0.27-stable"
+  version = "1.0.28-stable"
   sha256 = ""
-  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/cprs"
+  exec = "~/.local/share/atlassian/atlas/plugin/cprs"
   channel = "stable"
 
 [[plugin]]
   name = "dac"
   summary = "Atlas CLI DAC plugin"
-  version = "18895-edd16515c2b3d2b48c14d8495e436830bff00150"
+  version = "19397-734243dcd3262dcc0d19a6aa39f446d79cac976a"
   sha256 = ""
-  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/dac"
+  exec = "~/.local/share/atlassian/atlas/plugin/dac"
   channel = "stable"
 
 [[plugin]]
@@ -153,7 +153,7 @@
 [[plugin]]
   name = "sonar"
   summary = "Atlassian-configured Sonar scans"
-  version = "0.1.290"
+  version = "0.1.307"
   sha256 = ""
-  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/sonar"
+  exec = "~/.local/share/atlassian/atlas/plugin/sonar"
   channel = "stable"
