Update Atlas plugins

--- a/home/config/atlassian/atlas/plugins-installed.toml
+++ b/home/config/atlassian/atlas/plugins-installed.toml
@@ -3,7 +3,7 @@
   summary = "Manage artifacts stored in Shipyard"
   version = "v2.8.1-3-gbcc3c59"
   sha256 = ""
-  exec = "~/.local/share/atlassian/atlas/plugin/shipyard"
+  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/shipyard"
   channel = "stable"
 
 [[plugin]]
@@ -11,7 +11,7 @@
   summary = "Service Layer Authentication"
   version = "1.0.12"
   sha256 = ""
-  exec = "~/.local/share/atlassian/atlas/plugin/slauth"
+  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/slauth"
   channel = "stable"
 
 [[plugin]]
@@ -25,7 +25,7 @@
 [[plugin]]
   name = "micros"
   summary = "Micros plugin for atlas-cli"
-  version = "119-2de2898"
+  version = "130-ce797f5"
   sha256 = ""
   exec = "~/.local/share/atlassian/atlas/plugin/micros"
   channel = "stable"
@@ -67,7 +67,7 @@
   summary = "Nebulae"
   version = "2.1.0"
   sha256 = ""
-  exec = "~/.local/share/atlassian/atlas/plugin/nebulae"
+  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/nebulae"
   channel = "stable"
 
 [[plugin]]
@@ -75,13 +75,13 @@
   summary = "Poco plugin for atlas-cli"
   version = "1.1.29"
   sha256 = ""
-  exec = "~/.local/share/atlassian/atlas/plugin/poco"
+  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/poco"
   channel = "stable"
 
 [[plugin]]
   name = "spin"
   summary = "Plugin for Spinnaker"
-  version = "0.8.290-564dc1e"
+  version = "0.8.292-51079d4"
   sha256 = ""
   exec = "~/.local/share/atlassian/atlas/plugin/spin"
   channel = "stable"
@@ -91,13 +91,13 @@
   summary = "Plugin for Vault secrets management"
   version = "0.5.0-61-g3b2436e4"
   sha256 = ""
-  exec = "~/.local/share/atlassian/atlas/plugin/secrets"
+  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/secrets"
   channel = "stable"
 
 [[plugin]]
   name = "packages"
   summary = "Provides a set of tools for working with packages.a.c"
-  version = "1.6.31"
+  version = "1.6.32"
   sha256 = ""
   exec = "~/.local/share/atlassian/atlas/plugin/packages"
   channel = "stable"
@@ -105,7 +105,7 @@
 [[plugin]]
   name = "atlasdev"
   summary = "Plugin for atlas-cli developers"
-  version = "0.0-781-g05aed5b"
+  version = "0.0-787-g113d9c8"
   sha256 = ""
   exec = "~/.local/share/atlassian/atlas/plugin/atlasdev"
   channel = "stable"
@@ -113,7 +113,7 @@
 [[plugin]]
   name = "atlops"
   summary = "Generic composable operations plugin (see go/atlops for more)"
-  version = "1.0.29"
+  version = "1.0.30"
   sha256 = ""
   exec = "~/.local/share/atlassian/atlas/plugin/atlops"
   channel = "stable"
@@ -121,9 +121,9 @@
 [[plugin]]
   name = "chaos"
   summary = "brahmos cli plugin"
-  version = "14-df3258c"
+  version = "15-8fd8d25"
   sha256 = ""
-  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/chaos"
+  exec = "~/.local/share/atlassian/atlas/plugin/chaos"
   channel = "stable"
 
 [[plugin]]
@@ -137,7 +137,7 @@
 [[plugin]]
   name = "dac"
   summary = "Atlas CLI DAC plugin"
-  version = "20168-e0cebd8486eda1d63a1a39545cc58bc54821b20c"
+  version = "20305-6f98bc4f64df184cc2e67a866929ed3ce25b0e60"
   sha256 = ""
   exec = "~/.local/share/atlassian/atlas/plugin/dac"
   channel = "stable"
@@ -155,5 +155,5 @@
   summary = "Atlassian-configured Sonar scans"
   version = "0.1.384"
   sha256 = ""
-  exec = "~/.local/share/atlassian/atlas/plugin/sonar"
+  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/sonar"
   channel = "stable"
