--- a/home/config/atlassian/atlas/plugins-installed.toml
+++ b/home/config/atlassian/atlas/plugins-installed.toml
@@ -9,9 +9,9 @@
 [[plugin]]
   name = "slauth"
   summary = "Service Layer Authentication"
-  version = "1.0.12"
+  version = "1.0.14"
   sha256 = ""
-  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/slauth"
+  exec = "~/.local/share/atlassian/atlas/plugin/slauth"
   channel = "stable"
 
 [[plugin]]
@@ -27,7 +27,7 @@
   summary = "Micros plugin for atlas-cli"
   version = "130-ce797f5"
   sha256 = ""
-  exec = "~/.local/share/atlassian/atlas/plugin/micros"
+  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/micros"
   channel = "stable"
 
 [[plugin]]
@@ -73,15 +73,15 @@
 [[plugin]]
   name = "poco"
   summary = "Poco plugin for atlas-cli"
-  version = "1.1.29"
+  version = "1.1.30"
   sha256 = ""
-  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/poco"
+  exec = "~/.local/share/atlassian/atlas/plugin/poco"
   channel = "stable"
 
 [[plugin]]
   name = "spin"
   summary = "Plugin for Spinnaker"
-  version = "0.8.292-51079d4"
+  version = "0.8.319-8c65b04"
   sha256 = ""
   exec = "~/.local/share/atlassian/atlas/plugin/spin"
   channel = "stable"
@@ -89,15 +89,15 @@
 [[plugin]]
   name = "secrets"
   summary = "Plugin for Vault secrets management"
-  version = "0.5.0-61-g3b2436e4"
+  version = "0.5.0-71-gdbfec814"
   sha256 = ""
-  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/secrets"
+  exec = "~/.local/share/atlassian/atlas/plugin/secrets"
   channel = "stable"
 
 [[plugin]]
   name = "packages"
   summary = "Provides a set of tools for working with packages.a.c"
-  version = "1.6.32"
+  version = "1.6.42"
   sha256 = ""
   exec = "~/.local/share/atlassian/atlas/plugin/packages"
   channel = "stable"
@@ -105,7 +105,7 @@
 [[plugin]]
   name = "atlasdev"
   summary = "Plugin for atlas-cli developers"
-  version = "0.0-787-g113d9c8"
+  version = "0.0-801-g476469d"
   sha256 = ""
   exec = "~/.local/share/atlassian/atlas/plugin/atlasdev"
   channel = "stable"
@@ -113,7 +113,7 @@
 [[plugin]]
   name = "atlops"
   summary = "Generic composable operations plugin (see go/atlops for more)"
-  version = "1.0.30"
+  version = "1.0.34"
   sha256 = ""
   exec = "~/.local/share/atlassian/atlas/plugin/atlops"
   channel = "stable"
@@ -123,7 +123,7 @@
   summary = "brahmos cli plugin"
   version = "15-8fd8d25"
   sha256 = ""
-  exec = "~/.local/share/atlassian/atlas/plugin/chaos"
+  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/chaos"
   channel = "stable"
 
 [[plugin]]
@@ -137,7 +137,7 @@
 [[plugin]]
   name = "dac"
   summary = "Atlas CLI DAC plugin"
-  version = "20305-6f98bc4f64df184cc2e67a866929ed3ce25b0e60"
+  version = "20973-b01e87215d057dc7e0a1f69655d4f0fc371cfb4c"
   sha256 = ""
   exec = "~/.local/share/atlassian/atlas/plugin/dac"
   channel = "stable"
@@ -145,15 +145,15 @@
 [[plugin]]
   name = "perfhammer"
   summary = "The official PerfHammer cli client."
-  version = "1.6.2"
+  version = "1.6.3"
   sha256 = ""
-  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/perfhammer"
+  exec = "~/.local/share/atlassian/atlas/plugin/perfhammer"
   channel = "stable"
 
 [[plugin]]
   name = "sonar"
   summary = "Atlassian-configured Sonar scans"
-  version = "0.1.384"
+  version = "0.1.438"
   sha256 = ""
-  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/sonar"
+  exec = "~/.local/share/atlassian/atlas/plugin/sonar"
   channel = "stable"
