--- a/home/config/atlassian/atlas/plugins-installed.toml
+++ b/home/config/atlassian/atlas/plugins-installed.toml
@@ -3,7 +3,7 @@
   summary = "Manage artifacts stored in Shipyard"
   version = "v2.8.2"
   sha256 = ""
-  exec = "~/.local/share/atlassian/atlas/plugin/shipyard"
+  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/shipyard"
   channel = "stable"
 
 [[plugin]]
@@ -11,7 +11,7 @@
   summary = "Service Layer Authentication"
   version = "1.0.17"
   sha256 = ""
-  exec = "~/.local/share/atlassian/atlas/plugin/slauth"
+  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/slauth"
   channel = "stable"
 
 [[plugin]]
@@ -25,15 +25,15 @@
 [[plugin]]
   name = "micros"
   summary = "Micros plugin for atlas-cli"
-  version = "159-00586fb"
+  version = "196-9dd4f70"
   sha256 = ""
-  exec = "~/.local/share/atlassian/atlas/plugin/micros"
+  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/micros"
   channel = "stable"
 
 [[plugin]]
   name = "kudos"
   summary = "A simple and quick way to thank your fellow Atlassians from the command line."
-  version = "3.3.5"
+  version = "3.3.7"
   sha256 = ""
   exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/kudos"
   channel = "stable"
@@ -49,7 +49,7 @@
 [[plugin]]
   name = "asap"
   summary = "ASAP Key management, ASAP requests, and token generation & validation"
-  version = "1.1.8"
+  version = "1.1.12"
   sha256 = ""
   exec = "~/.local/share/atlassian/atlas/plugin/asap"
   channel = "stable"
@@ -65,23 +65,23 @@
 [[plugin]]
   name = "nebulae"
   summary = "Nebulae"
-  version = "2.2.0"
+  version = "2.5.0"
   sha256 = ""
-  exec = "~/.local/share/atlassian/atlas/plugin/nebulae"
+  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/nebulae"
   channel = "stable"
 
 [[plugin]]
   name = "poco"
   summary = "Poco plugin for atlas-cli"
-  version = "1.1.31"
+  version = "1.1.32"
   sha256 = ""
-  exec = "~/.local/share/atlassian/atlas/plugin/poco"
+  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/poco"
   channel = "stable"
 
 [[plugin]]
   name = "spin"
   summary = "Plugin for Spinnaker"
-  version = "0.8.339-5384df5"
+  version = "0.9.363-556373d"
   sha256 = ""
   exec = "~/.local/share/atlassian/atlas/plugin/spin"
   channel = "stable"
@@ -89,7 +89,7 @@
 [[plugin]]
   name = "secrets"
   summary = "Plugin for Vault secrets management"
-  version = "0.5.0-84-g777c1f8e"
+  version = "0.5.0-92-ga8563f4e"
   sha256 = ""
   exec = "~/.local/share/atlassian/atlas/plugin/secrets"
   channel = "stable"
@@ -97,7 +97,7 @@
 [[plugin]]
   name = "packages"
   summary = "Provides a set of tools for working with packages.a.c"
-  version = "1.6.57"
+  version = "1.6.63"
   sha256 = ""
   exec = "~/.local/share/atlassian/atlas/plugin/packages"
   channel = "stable"
@@ -105,7 +105,7 @@
 [[plugin]]
   name = "atlasdev"
   summary = "Plugin for atlas-cli developers"
-  version = "0.0-820-gdead39c"
+  version = "0.0-844-g2837fe7"
   sha256 = ""
   exec = "~/.local/share/atlassian/atlas/plugin/atlasdev"
   channel = "stable"
@@ -113,9 +113,9 @@
 [[plugin]]
   name = "atlops"
   summary = "Generic composable operations plugin (see go/atlops for more)"
-  version = "1.0.37"
+  version = "1.0.38"
   sha256 = ""
-  exec = "~/.local/share/atlassian/atlas/plugin/atlops"
+  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/atlops"
   channel = "stable"
 
 [[plugin]]
@@ -123,15 +123,15 @@
   summary = "brahmos cli plugin"
   version = "41-9455a20"
   sha256 = ""
-  exec = "~/.local/share/atlassian/atlas/plugin/chaos"
+  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/chaos"
   channel = "stable"
 
 [[plugin]]
   name = "cprs"
   summary = "Command line interface for the Command Peer Review System."
-  version = "1.0.32-stable"
+  version = "1.0.33-stable"
   sha256 = ""
-  exec = "~/.local/share/atlassian/atlas/plugin/cprs"
+  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/cprs"
   channel = "stable"
 
 [[plugin]]
@@ -139,7 +139,7 @@
   summary = "Atlas CLI DAC plugin"
   version = "21672-8d2ef1909dbe1c6fda692a5a58a76c582af0c48d"
   sha256 = ""
-  exec = "~/.local/share/atlassian/atlas/plugin/dac"
+  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/dac"
   channel = "stable"
 
 [[plugin]]
@@ -147,13 +147,13 @@
   summary = "The official PerfHammer cli client."
   version = "1.6.6"
   sha256 = ""
-  exec = "~/.local/share/atlassian/atlas/plugin/perfhammer"
+  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/perfhammer"
   channel = "stable"
 
 [[plugin]]
   name = "sonar"
   summary = "Atlassian-configured Sonar scans"
-  version = "0.1.438"
+  version = "0.1.500"
   sha256 = ""
-  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/sonar"
+  exec = "~/.local/share/atlassian/atlas/plugin/sonar"
   channel = "stable"
