Install `compose-switch`

--- a/home/bingo/variables.env
+++ b/home/bingo/variables.env
@@ -10,6 +10,8 @@ fi
 
 BINGO="${GOBIN}/bingo-v0.5.2"
 
+DOCKER_COMPOSE="${GOBIN}/docker-compose-v1.0.4"
+
 GOLANGCI_LINT="${GOBIN}/golangci-lint-v1.44.2"
 
 JIRA="${GOBIN}/jira-v1.0.28"
