--- a/home/ssh/config
+++ b/home/ssh/config
@@ -31,7 +31,7 @@ Host *
   GSSAPIAuthentication no
   HashKnownHosts no
   IdentityFile ~/.ssh/keys/%h.key
-  PasswordAuthentication no
+  PasswordAuthentication yes
   PubkeyAuthentication yes
   ServerAliveCountMax 8
   ServerAliveInterval 15
